[package]
name = "cite-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.1", features = ["derive"] }
handlebars = { version = "4.3.6", features = ["dir_source"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
